--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>TSBeginner</title>
+    <title>TO-DO List</title>
     <style>
       * {
         font-family: sans-serif;
